@@ -1,17 +1,0 @@
-# Convenience stub makefile to call the real Makefile.
-
-@SET_MAKE@
-
-# Explicit so that it's the default rule.
-all:
-	cd ../.. && $(MAKE) extension/plugin/all
-
-clean %.a %.o:
-	cd ../.. && $(MAKE) extension/plugin/$@
-
-.PHONY: all clean
-
-OBJEXT = @OBJEXT@
-
-.SUFFIXES:
-.SUFFIXES: .a .$(OBJEXT)
